@@ -28,20 +28,12 @@ mips32_libdir = /usr/libo32
 
 define libc6-dev-mipsn32_extra_pkg_install
 
-mkdir -p debian/libc6-dev-mipsn32/usr/include
-ln -sf mips64el-linux-gnuabi64/bits debian/libc6-dev-mipsn32/usr/include/
-ln -sf mips64el-linux-gnuabi64/gnu debian/libc6-dev-mipsn32/usr/include/
-ln -sf mips64el-linux-gnuabi64/fpu_control.h debian/libc6-dev-mipsn32/usr/include/
+$(call generic_multilib_extra_pkg_install,libc6-dev-mipsn32)
 
 mkdir -p debian/libc6-dev-mipsn32/usr/include/mips64el-linux-gnuabi64/gnu
 cp -a debian/tmp-mipsn32/usr/include/gnu/lib-names-n32_hard.h \
 	debian/tmp-mipsn32/usr/include/gnu/stubs-n32_hard.h \
 	debian/libc6-dev-mipsn32/usr/include/mips64el-linux-gnuabi64/gnu
-
-mkdir -p debian/libc6-dev-mipsn32/usr/include/sys
-for i in `ls debian/tmp-libc/usr/include/mips64el-linux-gnuabi64/sys` ; do \
-        ln -sf ../mips64el-linux-gnuabi64/sys/$$i debian/libc6-dev-mipsn32/usr/include/sys/$$i ; \
-done
 
 endef
 
