@@ -21,6 +21,9 @@ glibc (2.30-5) UNRELEASED; urgency=medium
   * debian/control.in/libc: add a Provides: libc6-dbgsym to the libc6-dbg
     package.  Closes: #953654.
 
+  [ Helmut Grohne ]
+  * Refactor generation of multilib include symlinks. (Closes: #958674).
+
  -- Samuel Thibault <sthibault@debian.org>  Sun, 29 Mar 2020 19:45:17 +0200
 
 glibc (2.30-4) unstable; urgency=medium
